proxy: Add pub/sub fe/be proxy
Signed-off-by: Iliya Iliev <iliyailiev3592@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,11 @@ project(proxy_service)
 
 cmake_minimum_required(VERSION 3.0)
 
+include(cmake/GolangSimple.cmake)
+
 # --- Proxy Service
 add_subdirectory(service)
+
+# --- GO server / proxy
+GO_GET(zmq github.com/pebbe/zmq4)
+add_subdirectory(proxy)
