client: Add go client
Signed-off-by: Iliya Iliev <iliyailiev3592@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.9)
 project(proxy_service)
 
-cmake_minimum_required(VERSION 3.0)
-
 include(cmake/GolangSimple.cmake)
 
 # --- Proxy Service
@@ -12,3 +10,5 @@ add_subdirectory(service)
 GO_GET(zmq github.com/pebbe/zmq4)
 add_subdirectory(proxy)
 add_subdirectory(server)
+
+add_subdirectory(client)
