--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ include(cmake/GolangSimple.cmake)
 add_subdirectory(service)
 
 # --- GO server / proxy
-GO_GET(zmq github.com/pebbe/zmq4)
 add_subdirectory(proxy)
 add_subdirectory(server)
 
+# --- Clients
 add_subdirectory(client)
